Index.html changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Objects</title>
 </head>
 <body>
-    <h1>Hello World of OOP hehe</h1>
+    <h1>Hello World of OOP</h1>
     <h1 id="person1-name"></h1>
     <h1 id="person1-age"></h1>
     <h1 id="person1-occupation"></h1>
@@ -15,9 +15,9 @@
     <script>
        //Input
         const person1 ={
-            name:"Cliff Amadeus",
-            age:23,
-            occupation:"hqr"
+            name:"Marchilyn Abunda",
+            age:24,
+            occupation:"Instructor"
         }
 
         //Process and Output
